--- a/_config.yml
+++ b/_config.yml
@@ -20,11 +20,11 @@ description: Portfolio Website
 
 # List of links in the navigation bar
 navbar-links:
-  About Me: "ameliormate.com/katie"
+  About Me: "aboutme"
   #Resources:
    # - Beautiful Jekyll: "http://deanattali.com/beautiful-jekyll/"
    # - Learn markdown: "http://www.markdowntutorial.com/"
-  #Author's home: "http://ameliormate.com/katie"
+  Author's home: "http://ameliormate.com/katie"
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
