--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # --- General options --- #
 
 # Name of website
-title: Katie Evanko-Douglas
+title: WorldWideKatie
 
 # Short description of your site
 description: Portfolio Website
